#9 Did we fix iPhone Issue Spacing?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,8 @@ body, html {
   padding: 0;
   font-family: 'Poppins', sans-serif;
   background-color: #a91c71;
-  height: 100%;
 }
+
 
 
 .custom-toast {
